# uwus-online

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: changelog.yml  ci.yml  codeql.yml  publish.yml
src/: main.py
src/static/css/: styles.css
src/templates/: index.html
tests/: conftest.py
tests/functional/: test_app.py
